# CppTemplate

./: CMakeLists.txt
apps/: CMakeLists.txt  modern_counter.cpp
docs/: CMakeLists.txt  mainpahe.md
include/modern/: lib.hpp
src/: CMakeLists.txt  lib.cpp
tests/: CMakeLists.txt  unit-tests.cpp
